--- a/_posts/2016-12-08-intro.markdown
+++ b/_posts/2016-12-08-intro.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "An introduction to introduction to Artificial Intelligence"
 date:   2016-12-08 22:56:35 +0000
-categories: jekyll update
+categories: 
 comments: true
 ---
 
