--- a/_posts/2016-12-10-vfe.markdown
+++ b/_posts/2016-12-10-vfe.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Varitional Inference: A high-level overview"
+title:  "Variational Inference: A high-level overview"
 date:   2016-12-10 22:56:35 +0000
 categories: 
 comments: true
